--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+alpaca-py==0.7.1
 autopep8==2.0.1
 backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.4
+certifi==2022.12.7
 cffi==1.14.0
+charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
 cssbeautifier==1.14.7
@@ -27,6 +30,9 @@ Jinja2==2.10.3
 jsbeautifier==1.14.7
 MarkupSafe==1.1.1
 matplotlib-inline==0.1.6
+msgpack==1.0.4
+numpy==1.21.6
+pandas==1.3.5
 parso==0.8.3
 pathspec==0.10.3
 pexpect==4.8.0
@@ -36,16 +42,23 @@ psycopg2-binary==2.8.4
 ptyprocess==0.7.0
 pycodestyle==2.10.0
 pycparser==2.21
+pydantic==1.10.5
 Pygments==2.14.0
+python-dateutil==2.8.2
+pytz==2022.7.1
 PyYAML==6.0
 regex==2022.10.31
+requests==2.28.2
 six==1.16.0
 SQLAlchemy==1.3.13
+sseclient-py==1.7.2
 tomli==2.0.1
 tqdm==4.64.1
 traitlets==5.8.1
 typing_extensions==4.4.0
+urllib3==1.26.14
 wcwidth==0.2.6
+websockets==10.4
 Werkzeug==0.16.0
 WTForms==3.0.1
 zipp==3.11.0
