--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==1.1.1
+greenlet==2.0.2
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 idna==3.4
@@ -50,7 +51,7 @@ PyYAML==6.0
 regex==2022.10.31
 requests==2.28.2
 six==1.16.0
-SQLAlchemy==1.3.13
+SQLAlchemy==1.4.46
 sseclient-py==1.7.2
 tomli==2.0.1
 tqdm==4.64.1
