--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 idna==3.4
