--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alpaca-py==0.7.1
+asttokens==2.2.1
+autopep8==2.0.2
 backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.4
@@ -10,6 +12,7 @@ decorator==5.1.1
 dnspython==2.3.0
 EditorConfig==0.12.3
 email-validator==1.3.1
+executing==1.2.0
 Flask==1.1.1
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.10.1
@@ -21,6 +24,7 @@ html-tag-names==0.1.2
 html-void-elements==0.1.0
 idna==3.4
 importlib-metadata==6.0.0
+ipython==8.11.0
 itsdangerous==1.1.0
 jedi==0.18.2
 Jinja2==2.10.3
@@ -35,8 +39,10 @@ pathspec==0.10.3
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.36
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.5
@@ -49,6 +55,7 @@ requests==2.28.2
 six==1.16.0
 SQLAlchemy==1.4.46
 sseclient-py==1.7.2
+stack-data==0.6.2
 tomli==2.0.1
 tqdm==4.64.1
 traitlets==5.8.1
