--- a/requirements.txt
+++ b/requirements.txt
@@ -3,66 +3,53 @@ asttokens==2.2.1
 autopep8==2.0.2
 backcall==0.2.0
 bcrypt==4.0.1
-blinker==1.4
+blinker==1.5
 certifi==2022.12.7
-charset-normalizer==3.0.1
+charset-normalizer==3.1.0
 click==8.1.3
-colorama==0.4.6
 decorator==5.1.1
 dnspython==2.3.0
-EditorConfig==0.12.3
 email-validator==1.3.1
 executing==1.2.0
-Flask==1.1.1
+Flask==2.2.3
 Flask-Bcrypt==1.0.1
-Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.4.1
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
 gunicorn==20.1.0
-html-tag-names==0.1.2
-html-void-elements==0.1.0
 idna==3.4
-importlib-metadata==6.0.0
 ipython==8.11.0
-itsdangerous==1.1.0
+itsdangerous==2.1.2
 jedi==0.18.2
-Jinja2==2.10.3
-jsbeautifier==1.14.7
-MarkupSafe==1.1.1
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 msgpack==1.0.4
-numpy==1.21.6
+numpy==1.24.2
 pandas==1.5.3
 parso==0.8.3
-pathspec==0.10.3
 pexpect==4.8.0
 pickleshare==0.7.5
-prompt-toolkit==3.0.36
+prompt-toolkit==3.0.38
 psycopg2==2.9.5
-psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.10.0
-pycparser==2.21
 pydantic==1.10.5
 Pygments==2.14.0
 python-dateutil==2.8.2
 pytz==2022.7.1
-PyYAML==6.0
-regex==2022.10.31
 requests==2.28.2
 six==1.16.0
-SQLAlchemy==1.4.46
+SQLAlchemy==2.0.5.post1
 sseclient-py==1.7.2
 stack-data==0.6.2
 tomli==2.0.1
-tqdm==4.64.1
-traitlets==5.8.1
-typing_extensions==4.4.0
+traitlets==5.9.0
+typing_extensions==4.5.0
 urllib3==1.26.14
 wcwidth==0.2.6
 websockets==10.4
-Werkzeug==0.16.0
+Werkzeug==2.2.3
 WTForms==3.0.1
-zipp==3.11.0
