--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-WTF==1.1.1
 greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
+install==1.3.5
 ipython==8.11.0
 itsdangerous==2.1.2
 jedi==0.18.2
@@ -32,7 +33,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.38
-psycopg2==2.9.5
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.10.0
